[gd_scene load_steps=11 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://core/state_machine/state_machine.gd" type="Script" id=2]
[ext_resource path="res://core/movement/idle_state.gd" type="Script" id=3]
[ext_resource path="res://core/movement/walk_state.gd" type="Script" id=4]
[ext_resource path="res://player/character.png" type="Texture" id=5]
[ext_resource path="res://interaction/interact_state.gd" type="Script" id=6]
[ext_resource path="res://player/input_rotator.gd" type="Script" id=7]
[ext_resource path="res://player/state_machine_debugger.gd" type="Script" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 4.0

[sub_resource type="Animation" id=2]
resource_name = "SleepyEyes"
length = 8.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 1.4, 1.8, 2.55, 2.9, 4.15, 4.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 4, 2, 1, 0 ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Debugging" type="CanvasLayer" parent="."]

[node name="StateMachineDebug" type="Label" parent="Debugging"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "State: {state}"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
hframes = 8
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource( 3 )
player_node = NodePath("../..")

[node name="WalkState" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
player_node = NodePath("../..")

[node name="InteractState" type="Area2D" parent="StateMachine"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 6 )
player_node = NodePath("../..")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="StateMachine/InteractState"]
position = Vector2( 0, 2 )
polygon = PoolVector2Array( 0, 0, 9, -3, 9, 3 )
script = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "SleepyEyes"
anims/SleepyEyes = SubResource( 2 )
next/SleepyEyes = "SleepyEyes"

[connection signal="transitioned" from="StateMachine" to="Debugging/StateMachineDebug" method="_on_StateMachine_transitioned"]
[connection signal="transitioned" from="StateMachine" to="StateMachine/InteractState/CollisionShape2D" method="_on_StateMachine_transitioned"]
[connection signal="body_entered" from="StateMachine/InteractState" to="StateMachine/InteractState" method="_on_InteractState_body_entered"]
[connection signal="body_exited" from="StateMachine/InteractState" to="StateMachine/InteractState" method="_on_InteractState_body_exited"]
